# docai

./: .env.example  .gitignore  README.md  cli.py  config.py  main.py  pyproject.toml
core/: document_processor.py  llm_handler.py  ocr_handler.py  validator.py
outputs/: driving_license_Drivers_license_20250621_153820.json
prompts/: driving_license.py  resume.py  store_recipt.py
